crates/kirin-derive-dialect/src/builder/snapshots/kirin_derive_dialect__builder__tests__wrapper_enum.snap
---
source: crates/kirin-derive-dialect/src/builder/tests.rs
expression: "case!\n{\n    #[wraps] #[kirin(fn, type_lattice = SomeLattice)] enum WrapperEnum\n    { A(InnerA), B(InnerB), }\n}"
---
impl From<InnerA> for WrapperEnum {
    fn from(value: InnerA) -> Self {
        Self::A(value)
    }
}
impl From<InnerB> for WrapperEnum {
    fn from(value: InnerB) -> Self {
        Self::B(value)
    }
}
