crates/kirin-derive-dialect/src/builder/snapshots/kirin_derive_dialect__builder__tests__wrapper_enum_generic.snap
---
source: crates/kirin-derive-dialect/src/builder/tests.rs
expression: "case!\n{\n    #[wraps] #[kirin(fn, type_lattice = T)] pub enum StructuredControlFlow<T:\n    TypeLattice> { If(If<T>), For(For<T>), }\n}"
---
impl<T: TypeLattice> From<If<T>> for StructuredControlFlow<T> {
    fn from(value: If<T>) -> Self {
        Self::If(value)
    }
}
impl<T: TypeLattice> From<For<T>> for StructuredControlFlow<T> {
    fn from(value: For<T>) -> Self {
        Self::For(value)
    }
}
